2013-03-13  Michal Staniaszek  <mxs968@cs.bham.ac.uk>

	* scripts: Added scripts to automatically run experiments, most are still works in
	progress but have the basic functionality required.

2013-03-12  Michal Staniaszek  <mxs968@cs.bham.ac.uk>

	* generator.c: Minor improvement to file copying.

	* math_util.c: Fix to double precision issue with gauss_transform function which caused
	incorrect data to be output.

	* experimenter.c: Experiment numbers are output based on the experiment that is running,
	not the overall count.

2013-03-11  Michal Staniaszek  <mxs968@cs.bham.ac.uk>

	* launcher.c: Added the -u switch, updated information to detail its usage.

	* file_util.c: Function for copying files, and a function specifically for copying
	the set of functions generated by the gaussian random function generator in order
	to allow for the generation of multiple sets of streams from a single function.

	* generator.c: Now possible to generate multiple streams from the same random function
	by using the -u switch.

2013-03-10  Michal Staniaszek  <mxs968@cs.bham.ac.uk>

	* generator.c: Check that the number of streams sent to the generator is not greater than
	the number of timedelta values that exist in the parameter file. Pre-generating raw files
	is no longer necessary. Using a command like
	      ./deltastream -g data/params.txt -f rand -t 3 -n 2 -c 5
	will automatically generate the number of random functions required and output the data to
	the current directory, and then read from the freshly generated files to generate streams.

	* estimator_delta.c: PMF estimator no longer normalises the values received from
	combining functions - these values are normalised by the function combination done
	prior to the pmf checks.

	* math_util.c: Implemented a function for checking that a double is less than or equal
	to another with some precision.

	* combinefunction.c: Fixed error with combining functions where the functions would be